syntax = "proto3";

package ru.practicum.ewm.analyzer.service;

import "ru/practicum/ewm/stats/message/recommendation_request.proto";

option java_package = "ru.practicum.ewm.stats.service";

service RecommendationsController {
  rpc GetRecommendationsForUser (ru.practicum.ewm.stats.message.UserPredictionsRequestProto)
      returns (stream ru.practicum.ewm.stats.message.RecommendedEventProto);

  rpc GetSimilarEvents (ru.practicum.ewm.stats.message.SimilarEventsRequestProto)
      returns (stream ru.practicum.ewm.stats.message.RecommendedEventProto);

  rpc GetInteractionsCount (ru.practicum.ewm.stats.message.InteractionsCountRequestProto)
      returns (stream ru.practicum.ewm.stats.message.RecommendedEventProto);
}