syntax = "proto3";

package ru.practicum.ewm.collector.message;

import "google/protobuf/empty.proto";
import "ru/practicum/ewm/stats/message/user_action.proto";

option java_package = "ru.practicum.ewm.stats.service";

service UserActionController {
  rpc CollectUserAction(ru.practicum.ewm.stats.message.UserActionProto)
      returns (google.protobuf.Empty);
}